/*
 * Copyright to the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.mstc.zmq;

message MethodRequest {
    required string method = 1;
    optional string type = 2;
    optional bytes input = 3;
}

enum Result {
    OKAY = 0;
    NO_SERVICE = 1;
    NO_METHOD = 2;
    BAD_REQUEST = 3;
    INVOCATION_ERROR = 4;
}

message Status {
    required Result result = 1 [default = OKAY];
    optional string status = 2;
}

message MethodResult {
    required Status status = 1;
    optional string type = 2;
    optional bytes result = 3;
}